# mission-control-platform

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
.claude/: settings.agent-control.example.json
.claude/agents/: agent-control-api.md  agent-control-contracts.md  agent-control-data.md  agent-control-frontend.md  agent-control-operations.md  agent-control-orchestrator.md  agent-control-qa.md  agent-control-runtime.md
.github/workflows/: ci.yml
.mission-control/: .gitignore  CONTRACTS.md  CONTRACTS_AGENT_CONTROL_V1.md
.mission-control/prompts/: agent-cli.md  api.md  auth.md  dashboard.md  db-core.md  realtime.md  socle.md
.mission_control_plateforme-sessions/: agent-control-p7-drift.md
apps/agent-cli/: README.md  pyproject.toml
apps/agent-cli/hooks/: pre_tool_use.sh  session_start.sh  stop.sh
apps/agent-cli/mc_platform/: __init__.py  __main__.py  cli.py  client.py
apps/agent-cli/tests/: test_client.py
apps/api/: create_admin.py  e2e_seed.py  main.py  requirements.txt  seed.py
apps/web/: .env.local  .gitignore  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
docs/: DEPLOY_FRONTED.md  README.md
docs/agent-control/: 01_ANALYSE_EXISTANT.md  02_SCHEMA_SOLUTION.md  03_PROMPT_GLOBAL.md  04_GUIDE_CLAUDE_CODE.md  08_RELEASE_ROLLBACK.md  CONSTATS_REVUE_2026-07-22.md
infra/: .env.example  .env.prod.example  Dockerfile.api  Dockerfile.web  api-entrypoint.sh  deploy-prod.sh  docker-compose.prod-fronted.yml  docker-compose.prod.yml  docker-compose.yml  restore-drill.sh
(+209 files in other folders)
