[project]
name = "mc-platform"
version = "0.1.0"
description = "CLI agent (zéro dépendance) — heartbeats vers Project Mission Control"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mc-platform = "mc_platform.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mc_platform"]
